--- a/COMPLIANCE.yaml
+++ b/COMPLIANCE.yaml
@@ -4,8 +4,8 @@ description: |
   compliance.
 spec:
   - name: PIA
-    status: PIA_STATUS_HERE
+    status: in-progress
     last-updated: '2023-01-07T18:52:18.252Z'
   - name: STRA
-    status: STRA_STATUS_HERE
+    status: in-progress
     last-updated: '2023-01-07T18:52:18.252Z'
